# hackathon

./: .gitignore  Cargo.toml  README.md
application/: Cargo.toml
infrastructure/: Cargo.toml
infrastructure/src/: main.rs
project/: Cargo.toml
project/src/: main.rs
